--- a/buy_thermomix.html
+++ b/buy_thermomix.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
     <title>How to buy Thermomix </title>
 </head>
 
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/static/img/logo.png" alt="">
+                    <img src="static/img/logo.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -45,7 +45,7 @@
         <!-- hero image -->
         <div class="hero-container">
             <div class="hero">
-                <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+                <img src="static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
             </div>
             <div class="d-flex text-center hero-heading">
                 <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
@@ -87,7 +87,7 @@
                             </ul>
                         </div>
                         <div class="col-md-6 js-scroll slide-right">
-                            <img src="/static/img/buy-tm6.jpg" class="card-img-top img-design img-fluid"
+                            <img src="static/img/buy-tm6.jpg" class="card-img-top img-design img-fluid"
                                 alt="card image">
                         </div>
 
@@ -125,7 +125,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h4>Full Payment</h4>
-                    <img src="/static/img/icons/payment-icon.png" class="m-3" alt="full payment method logo">
+                    <img src="static/img/icons/payment-icon.png" class="m-3" alt="full payment method logo">
                     <p>
                         Full Payment: Pay £1,279 upfront via debit or credit card (Mastercard or Visa). Includes free
                         3-year extended warranty.
@@ -133,7 +133,7 @@
                 </div>
                 <div class="col-md-4">
                     <h4>Earn a Free Thermomix</h4>
-                    <img src="/static/img/icons/earn-icon.png" class="m-3" alt="earm for free icon">
+                    <img src="static/img/icons/earn-icon.png" class="m-3" alt="earm for free icon">
                     <p>
                         Want to earn a Thermomix®? Join as an advisor, sell two units in 30 days, and get your own
                         Thermomix® without paying a penny!
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-md-4">
                     <h4>Finance Plan</h4>
-                    <img src="/static/img/icons//finance-icon.png" class="m-3" alt="finance logo">
+                    <img src="static/img/icons//finance-icon.png" class="m-3" alt="finance logo">
                     <p>
                         Finance Plans: Choose Novuna Finance with 12, 24, 36, or 48 months options (14.9% APR). Monthly
                         payments start from £61.39.
@@ -200,7 +200,7 @@
             </p>
             <div>
                 <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-                    <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
+                    <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg" />
                 </a>
             </div>
         </section>
@@ -216,7 +216,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous">
   </script>
-  <script src="/static/script/script.js"></script>
+  <script src="static/script/script.js"></script>
 </body>
 
 </html>
