--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="static/css/style.css">
   <title>Contact</title>
 </head>
 
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/static/img/logo.png" alt="">
+          <img src="static/img/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
     <!-- hero image -->
     <div class="hero-container">
       <div class="hero">
-        <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+        <img src="static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
       </div>
       <div class="d-flex text-center hero-heading">
         <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
@@ -76,7 +76,7 @@
               </p>
             </div>
             <div class="col-md-6 js-scroll slide-right">
-              <img src="/static/img/tm6-only.jpg" class="img-fluid img-design" alt="buy thermomix">
+              <img src="static/img/tm6-only.jpg" class="img-fluid img-design" alt="buy thermomix">
             </div>
             <div class="container-fluid">
               <form action="book_demo" class="mt-5">
@@ -122,7 +122,7 @@
       </p>
       <div>
         <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-          <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
+          <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg" />
         </a>
       </div>
     </section>
@@ -138,7 +138,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous">
   </script>
-  <script src="/static/script/script.js"></script>
+  <script src="static/script/script.js"></script>
 </body>
 
 </html>
