--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="static/css/style.css">
   <title>Book a Thermomix Cooking Demo</title>
 </head>
 
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/static/img/logo.png" alt="">
+          <img src="static/img/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
     <!-- hero image -->
     <div class="hero-container">
       <div class="hero">
-        <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+        <img src="static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
       </div>
       <div class="d-flex text-center hero-heading">
         <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
@@ -83,7 +83,7 @@
               </p>
             </div>
             <div class="col-md-6 js-scroll slide-right">
-              <img src="/static/img/book-demo.jpeg" class="card-img-top img-design" alt="book a demo image">
+              <img src="static/img/book-demo.jpeg" class="card-img-top img-design" alt="book a demo image">
             </div>
 
             <!-- Book a demo Form -->
@@ -121,7 +121,7 @@
       <div class="row">
         <div class="col-md-4">
           <h4>Schedule a Cooking Demo</h4>
-          <img src="/static/img/icons/shedule-icon.png" class="m-3" alt="schedule icon">
+          <img src="static/img/icons/shedule-icon.png" class="m-3" alt="schedule icon">
           <p>
             Begin your Thermomix® journey by scheduling a one-on-one cooking demonstration with me. The experience is
             tailored to your unique cooking habits and preferences. When you request a demo, you can share how many
@@ -132,7 +132,7 @@
         </div>
         <div class="col-md-4">
           <h4>Discover it in Action</h4>
-          <img src="/static/img/icons/discover_icon.png" class="m-3" alt="discover icon">
+          <img src="static/img/icons/discover_icon.png" class="m-3" alt="discover icon">
           <p>
             During your personalized cooking demo, experience firsthand how versatile the Thermomix® is. You’ll see how
             effortlessly it chops, blends, kneads, and cooks, showcasing its full range of features. Try out different
@@ -143,7 +143,7 @@
         </div>
         <div class="col-md-4">
           <h4>Decide at Your Own Pace</h4>
-          <img src="/static/img/icons/selection-icon.png" class="m-3" alt="selection icon">
+          <img src="static/img/icons/selection-icon.png" class="m-3" alt="selection icon">
           <p>
             After the demo, if you're impressed with what the Thermomix® has to offer, I will guide you through the
             ordering process, detailing all the available payment options. Whether you choose to purchase right away or
@@ -169,7 +169,7 @@
       </p>
       <div>
         <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-          <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
+          <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg" />
         </a>
       </div>
     </section>
@@ -185,7 +185,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous">
   </script>
-  <script src="/static/script/script.js"></script>
+  <script src="static/script/script.js"></script>
 </body>
 
 </html>
