--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="static/css/style.css">
   <title>Alina Official Thermomix Advisor</title>
 </head>
 
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/static/img/logo.png" alt="">
+          <img src="static/img/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
     <!-- hero image -->
     <div class="hero-container">
       <div class="hero">
-        <img src="/static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
+        <img src="static/img/hero-img.jpeg" alt="hero img" class="img-fluid mx-auto d-block">
       </div>
       <div class="d-flex text-center hero-heading">
         <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
@@ -64,7 +64,7 @@
               Thermomix® Advisor</h1>
             <div class="row">
               <div class="col">
-                <img src="/static/img/alina.jpeg" class="img-design img-fluid js-scroll slide-left" alt="Thermomix TM6 Image">
+                <img src="static/img/alina.jpeg" class="img-design img-fluid js-scroll slide-left" alt="Thermomix TM6 Image">
               </div>
               <div class="col-md-6 d-flex js-scroll slide-right">
                 <p>
@@ -122,7 +122,7 @@
                   </a>
               </div>
               <div class="col-md-6 js-scroll slide-right">
-                <img src="/static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
+                <img src="static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
               </div>
           </section>
         </div>
@@ -140,7 +140,7 @@
         </p>
         <div class="buy_thermomix-img">
           <video id="thermomixVideo" controls class="img-fluid" alt="Thermomix TM6 demo video">
-            <source src="/static/video/TM6-video.mp4" type="video/mp4">
+            <source src="static/video/TM6-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
           <div id="thermomixButtons" class="buy_thermomix-btn">
@@ -172,7 +172,7 @@
         </p>
         <div>
           <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-            <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
+            <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg" />
           </a>
         </div>
       </section>
@@ -187,7 +187,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
       </script>
-    <script src="/static/script/script.js"></script>
+    <script src="static/script/script.js"></script>
 </body>
 
 </html>
