Adding padding to first col index page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <div class="col">
                 <img src="static/img/alina.jpeg" class="img-design img-fluid js-scroll slide-left" alt="Thermomix TM6 Image">
               </div>
-              <div class="col-md-6 d-flex js-scroll slide-right">
+              <div class="col-md-6 d-flex pt-4 js-scroll slide-right">
                 <p>
                   The Thermomix® TM6 is a revolutionary all-in-one kitchen appliance designed to simplify cooking for
                   home
