Adding video poster tag

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           Thermomix® empower your kitchen, so you can cook smarter, not harder!
         </p>
         <div class="buy_thermomix-img">
-          <video id="thermomixVideo" controls muted class="img-fluid" alt="Thermomix TM6 demo video">
+          <video id="thermomixVideo" controls poster="static/img/video-poster.png" class="img-fluid" alt="Thermomix TM6 demo video">
             <source src="static/video/TM6-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
