Fixed elemet button and descendent a tag on buttos

--- a/buy_thermomix.html
+++ b/buy_thermomix.html
@@ -49,9 +49,9 @@
             </div>
             <div class="d-flex text-center hero-heading">
                 <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
-                <a href="demo.html">
-                    <button type="button" class="btn btn-success m-3">Book a Demo</button>
-                </a>
+                <button type="button" class="btn btn-success">
+                    <a href="demo.html">Book a Demo</a>
+                </button>
             </div>
         </div>
     </header>
@@ -200,7 +200,7 @@
             </p>
             <div>
                 <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-                    <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg" />
+                    <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg" >
                 </a>
             </div>
         </section>
