--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       </div>
       <div class="d-flex text-center hero-heading">
         <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
-        <a href="demo.html">
-          <button type="button" class="btn btn-success m-3">Book a Demo</button>
-        </a>
+        <button type="button" class="btn btn-success ">
+          <a class="text-white" href="demo.html">Book a Demo</a>
+        </button>
       </div>
     </div>
   </header>
@@ -84,14 +84,12 @@
                   empowers you to save time and reduce kitchen clutter while unleashing your culinary creativity.
                 <p>
                 <p>
-                  Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover
-                  how
-                  the
-                  Thermomix can transform your cooking experience today!
+                  Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo and discover how the Thermomix can transform your cooking experience today!
                 </p>
-                <a href="demo.html">
-                  <button type="button" class="btn btn-success">Book a Demo</button>
-                </a>
+                
+                <button type="button" class="btn btn-success">
+                  <a href="demo.html">Book a Demo</a>
+                </button>
               </div>
 
               <!--Section what comes with thermomix  -->
@@ -116,10 +114,10 @@
                   It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve
                   nutrition, and enjoy stress-free meal preparation. <br>
                   <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
-                <p>
-                  <a href="buy_thermomix.html">
-                    <button type="button" class="btn btn-success">Buy - TM6</button>
-                  </a>
+                </p>
+                <button type="button" class="btn btn-success">
+                  <a href="demo.html">Book a Demo</a>
+                </button>
               </div>
               <div class="col-md-6 js-scroll slide-right">
                 <img src="static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
@@ -145,14 +143,12 @@
           </video>
           <div id="thermomixButtons" class="buy_thermomix-btn">
             <div>
-              <a href="buy_thermomix.html">
-                <button type="button" class="btn btn-success m-3">Buy - TM6</button>
-              </a>
-            </div>
-            <div>
-              <a href="demo.html">
-                <button type="button" class="btn btn-success m-3">Book a Demo</button>
-              </a>
+              <button type="button" class="btn btn-success m-3">
+                <a href="buy_thermomix.html">Buy - TM6</a>
+              </button>
+              <button type="button" class="btn btn-success ">
+                <a href="demo.html">Book a Demo</a>
+              </button>
             </div>
           </div>
         </div>
@@ -172,7 +168,7 @@
         </p>
         <div>
           <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-            <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg" />
+            <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg" >
           </a>
         </div>
       </section>
