--- a/buy_thermomix.html
+++ b/buy_thermomix.html
@@ -15,8 +15,8 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="static/img/logo.png" alt="">
+                <a class="navbar-brand" href="index.html">
+                    <img src="static/img/logo.png" alt="alina thermomix advisor brand">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -26,13 +26,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="demo.html">Book Demo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
+                            <a class="nav-link active" href="buy_thermomix.html">Buy Thermomix</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
