--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="static/img/logo.png" alt="">
+        <a class="navbar-brand" href="index.html">
+          <img src="static/img/logo.png" alt="alina thermomix advisor brand">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
