Fixed error ending tag html check

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
       </div>
       <div class="d-flex text-center hero-heading">
         <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
-        <button type="button" class="btn btn-success ">
-          <a class="text-white" href="demo.html">Book a Demo</a>
-        </button>
+        <a class="btn btn-success" href="demo.html">Book a Demo</a>
       </div>
     </div>
   </header>
@@ -64,7 +62,8 @@
               Thermomix® Advisor</h1>
             <div class="row">
               <div class="col">
-                <img src="static/img/alina.jpeg" class="img-design img-fluid js-scroll slide-left" alt="Thermomix TM6 Image">
+                <img src="static/img/alina.jpeg" class="img-design img-fluid js-scroll slide-left"
+                  alt="Thermomix TM6 Image">
               </div>
               <div class="col-md-6 d-flex pt-4 js-scroll slide-right">
                 <p>
@@ -84,13 +83,12 @@
                   empowers you to save time and reduce kitchen clutter while unleashing your culinary creativity.
                 <p>
                 <p>
-                  Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo and discover how the Thermomix can transform your cooking experience today!
+                  Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo and discover how the
+                  Thermomix can transform your cooking experience today!
                 </p>
-                
-                <button type="button" class="btn btn-success">
-                  <a href="demo.html">Book a Demo</a>
-                </button>
+                <a class="btn btn-success" href="demo.html">Book a Demo</a>
               </div>
+
 
               <!--Section what comes with thermomix  -->
           </section>
@@ -115,9 +113,7 @@
                   nutrition, and enjoy stress-free meal preparation. <br>
                   <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
                 </p>
-                <button type="button" class="btn btn-success">
-                  <a href="demo.html">Book a Demo</a>
-                </button>
+                <a class="btn btn-success" href="demo.html">Book a Demo</a>
               </div>
               <div class="col-md-6 js-scroll slide-right">
                 <img src="static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
@@ -137,18 +133,14 @@
           Thermomix® empower your kitchen, so you can cook smarter, not harder!
         </p>
         <div class="buy_thermomix-img">
-          <video id="thermomixVideo" controls poster="static/img/video-poster.png" class="img-fluid" alt="Thermomix TM6 demo video">
+          <video id="thermomixVideo" controls poster="static/img/video-poster.png" class="img-fluid">
             <source src="static/video/TM6-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
           <div id="thermomixButtons" class="buy_thermomix-btn">
             <div>
-              <button type="button" class="btn btn-success m-3">
-                <a href="buy_thermomix.html">Buy - TM6</a>
-              </button>
-              <button type="button" class="btn btn-success ">
-                <a href="demo.html">Book a Demo</a>
-              </button>
+              <a class="btn btn-success m-3" href="buy_thermomix.html">Buy - TM6</a>
+              <a class="btn btn-success" href="demo.html">Book a Demo</a>
             </div>
           </div>
         </div>
@@ -168,7 +160,7 @@
         </p>
         <div>
           <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-            <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg" >
+            <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg">
           </a>
         </div>
       </section>
