--- a/buy_thermomix.html
+++ b/buy_thermomix.html
@@ -49,9 +49,7 @@
             </div>
             <div class="d-flex text-center hero-heading">
                 <span>The world's smallest, smartest kitchen - <br> Thermomix® TM6 </span>
-                <button type="button" class="btn btn-success">
-                    <a href="demo.html">Book a Demo</a>
-                </button>
+                <a class="btn btn-success" href="demo.html">Book a Demo</a>
             </div>
         </div>
     </header>
