Closing missing div tag

--- a/index.html
+++ b/index.html
@@ -88,8 +88,6 @@
                 </p>
                 <a class="btn btn-success" href="demo.html">Book a Demo</a>
               </div>
-
-
               <!--Section what comes with thermomix  -->
           </section>
           <section id="what_comes_with_thermomix">
@@ -118,6 +116,7 @@
               <div class="col-md-6 js-scroll slide-right">
                 <img src="static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
               </div>
+            </div>
           </section>
         </div>
       </div>
