Fixed unclosed tag

--- a/demo.html
+++ b/demo.html
@@ -73,11 +73,8 @@
               </p>
               <p>Whether you need recipe tips or ongoing advice, I'm here to ensure you make the most of your
                 investment and enjoy a rewarding culinary journey! <br><br>
-
                 Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and
-                discover how
-                the
-                Thermomix can transform your cooking experience today!</p>
+                discover how the Thermomix can transform your cooking experience today!
               </p>
             </div>
             <div class="col-md-6 js-scroll slide-right">
