Closing missing tag Div

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 </p>
                 <a class="btn btn-success" href="demo.html">Book a Demo</a>
               </div>
+            </div>
               <!--Section what comes with thermomix  -->
           </section>
           <section id="what_comes_with_thermomix">
