--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,9 @@
             <li class="nav-item">
               <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
             </li>
+            <li class="nav-item"></li>
+              <a class="nav-link" href="about_me.html">About Me</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link active" href="contact.html">Contact</a>
             </li>
