--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <li class="nav-item">
               <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
             </li>
+            <li class="nav-item"></li>
+              <a class="nav-link" href="about_me.html">About Me</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
@@ -89,7 +92,7 @@
                 <a class="btn btn-success" href="demo.html">Book a Demo</a>
               </div>
             </div>
-              <!--Section what comes with thermomix  -->
+            <!--Section what comes with thermomix  -->
           </section>
           <section id="what_comes_with_thermomix">
             <h2 class="mb-4 gowun-batang-regular">What comes in the Thermomix TM6 Box </h2>
@@ -174,7 +177,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-      </script>
+    </script>
     <script src="static/script/script.js"></script>
 </body>
 
