Adding about me link on nav

--- a/about_me.html
+++ b/about_me.html
@@ -57,71 +57,80 @@
 <div class="main-container js-scroll">
   <section class="book-demo contact">
     <div class="card card-top mx-auto text-center">
-      <h1 class="card-title m-3 gowun-batang-regular">About Alina's your Official Thermomix Advisor </h1>
+      <h1 class="p-3 gowun-batang-regular">About Alina Cristescu </h1>
       <div class="card-body">
         <div class="row">
           <div class="col-md-6 d-flex js-scroll slide-left">
             <p>
-              Hi, I'm Alina Cristescu, a Master Colourist with over 20 years of experience in hairdressing. Working
-              with people and making them feel beautiful has always been my passion. I love seeing the joy a fresh
-              hairstyle brings to someone’s day!
+              Hi, I’m Alina Cristescu, a Master Colourist with over 20 years in hairdressing and <strong>North London’s
+                2024 Top-Seller Thermomix Advisor</strong>. <br> My career as a colourist has been all about connecting
+              with people and helping them feel their best, and I’ve brought that same passion into my role as a
+              Thermomix Advisor. I love sharing a tool that makes cooking simpler, healthier, and more enjoyable for
+              everyone.
             </p>
             <p>
-              A few years ago, I discovered the Thermomix® TM6. With my busy schedule, I needed fast, simple, and healthy
-              meal solutions—cooking was a necessity, not a hobby. But Thermomix changed that! Though I’ve never been
-              someone who loved cooking, I found myself recommending it to others because it genuinely makes life
-              easier.
+              With Thermomix, I create quick, delicious meals without the stress. It is perfect for my busy life. As an
+              Independent Thermomix Advisor, I guide others in discovering this remarkable kitchen tool, offering free
+              demos that showcase its capabilities.
             </p>
-            <p>
-              I believe in
-              this product, not just because it simplifies cooking, but because it builds a community. I offer free
-              demonstrations—either in person or via video call—so you can see firsthand how it works and how it could
-              fit into your life.
+            <p><em>I'm here to support you every step of the way, from your first introduction to incorporating it into
+                your daily routine..</em>
             </p>
-            <blockquote>Today, I’m proud to be an Independent Thermomix Advisor and North London’s 2024 top-seller.</blockquote>
           </div>
           <div class="col-md-6 js-scroll slide-right">
-              <img src="static/img/Alina-profile.jpg" class="img-fluid img-design" alt="Alina's about me profile">
+            <img src="static/img/Alina-profile.jpg" class="img-fluid img-design" alt="Alina's about me profile">
           </div>
         </div>
-          <!-- <button class="read-more btn btn-success">Read More</button> -->
-          <!-- <div class="toggle-content"> -->
-            <div class="row">
-              <h2 class="card-title m-4 gowun-batang-regular">How I became a Thermomix Advisor</h2>
-              <div class="col-md-6 d-flex js-scroll slide-left">
-                <img src="static/img/Top-advisor.jpg" class="img-fluid img-design" alt="">
-              </div>
-              <div class="col-md-6 pt-3 d-flex js-scroll slide-right">
-                <p>
-                  For me, the journey began when I bought my own Thermomix® TM6 from a friend. Its intuitive design and the
-                  Cookidoo app opened up a world of possibilities, new recipes, better meal planning, and even grocery
-                  shopping all in one place! Plus, its guided cooking feature ensures a perfect result every time.
-                </p>
-                <p>
-                  What really sold me was how much time and money I saved. The Thermomix® TM6 streamlined my kitchen,
-                  replacing over 20 gadgets and freeing up space while offering endless options for meals. My daughter was
-                  amazed by the self-clean mode and the ease of use, and it completely changed how we approach food at
-                  home.
-                </p>
-                <em>
-                  I always say: we upgrade our phones regularly, but nothing compares to the value you get from a
-                  Thermomix. It’s an investment that pays for itself in time, convenience, and the joy of cooking.
-                  
-                </em><br>
-                <p>
-                  If you’re curious, let’s schedule a demo. I’ll show you how this incredible gadget can transform your
-                  kitchen and make life easier. Whether you're passionate about cooking or, like me, just need to get food
-                  on the table, Thermomix has something for everyone.
-                </p>
-                <p>
-                  Feel free to reach out—I'd love to help you discover the magic of Thermomix!
-                </p>
-              </div>
-            </div>
+        <!-- <button class="read-more btn btn-success">Read More</button> -->
+        <!-- <div class="toggle-content"> -->
+        <div class="row">
+          <h2 class="p-3 gowun-batang-regular">How I became a Thermomix Advisor</h2>
+          <div class="col-md-6 d-flex js-scroll slide-left">
+            <img src="static/img/Top-advisor.jpg" class="img-fluid img-design" alt="top thermomix advisor in north London image">
+          </div>
+          <div class="col-md-6 pt-3 d-flex js-scroll slide-right">
+            <p>
+              My journey to becoming a Thermomix Advisor began a few years ago when I found myself overwhelmed by the
+              demands of my hairdressing career and family responsibilities. Cooking felt more like a chore than a
+              joy, until I discovered the Thermomix. It transformed my approach to meals, making cooking easy and
+              allowing me to prepare healthy dishes that fit my hectic schedule.
+            </p>
+            <p>
+              Purchasing a Thermomix is not just buying another kitchen gadget; it’s an investment in convenience,
+              health, and quality. When you buy through an <strong> Authorised Independent Advisor (Advisor ID 249784)</strong>,     like myself, covering North London, you get the unique opportunity to try Thermo
+              mix risk-free for 14 days. This means you can explore all its features and see firsthand how it transforms
+              your cooking experience.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <h3 class=" gowun-batang-regular p-3">My Transformation with Thermomix</h3>
+          <div class="col-md-6 pt-3 d-flex js-scroll slide-left">
+            <p>
+              One of the standout features for me was the Cookidoo app. It made meal planning effortless, allowing me to
+              browse thousands of recipes, add ingredients to my shopping basket, and compare prices at Sainsbury's,
+              Tesco, Ocado, and Amazon Fresh—all at the click of a button. This level of convenience not only saves time
+              but also helps with budgeting, turning Thermomix into my personal chef and meal planner.
+            </p>
+            <p>
+              Witnessing the positive impact of Thermomix on my life inspired me to share this incredible tool with
+              others. Now, as an Independent Thermomix Advisor, I am dedicated to helping people experience the many
+              benefits of this kitchen marvel.
+            </p>
+            <p>
+              <strong>I offer free, no-obligation demos where you can see Thermomix in action and discover how it can simplify    your cooking.</strong><br><br> <em>Let’s embark on your journey to easier, more enjoyable meals together!</em> 
+            </p>
+          </div>
+          <div class="col-md-6 d-flex js-scroll slide-right">
+            <video controls poster="static/img/all-in-one-bg.png" class="img-fluid img-design min-Height">
+              <source src="static/video/all-in-one.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
           </div>
         </div>
       </div>
-  </section>
+    </div>
+</section>
 </div>
 <footer class="tex-white mx-auto text-center py-4">
   <section class="footer">
