--- a/demo.html
+++ b/demo.html
@@ -81,7 +81,7 @@
               </p>
             </div>
             <div class="col-md-6 js-scroll slide-right">
-              <img src="static/img/book-demo.jpeg" class="card-img-top img-design" alt="book a demo image">
+              <img src="static/img/book-demo.jpeg" class="card-img-top img-fluid img-design" alt="book a demo image">
             </div>
 
             <!-- Book a demo Form -->
