--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           Thermomix® empower your kitchen, so you can cook smarter, not harder!
         </p>
         <div class="buy_thermomix-img">
-          <video id="thermomixVideo" controls poster="static/img/video-poster.png" class="img-fluid">
+          <video id="thermomixVideo" controls poster="static/img/video-poster.png">
             <source src="static/video/TM6-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
