--- a/index.html
+++ b/index.html
@@ -35,16 +35,21 @@
               <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
             </li>
             <li class="nav-item"></li>
-              <a class="nav-link" href="about_me.html">About Me</a>
+            <a class="nav-link" href="about_me.html">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
+        <!-- Button trigger modal -->
+        <div class="modal-flag-btn">
+          <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+            <img src="static/img/icons/romania-flag-icon.png" alt="Romania flag icon">
+          </button>
+        </div>
       </div>
     </nav>
-
     <!-- hero image -->
     <div class="hero-container">
       <div class="hero">
@@ -64,9 +69,8 @@
             <h1 class="card-title mb-4 gowun-batang-regular">Discover the Power of Thermomix® with Alina - Official UK
               Thermomix® Advisor</h1>
             <div class="row">
-              <div class="col">
-                <img src="static/img/alina.jpeg" class="img-design img-fluid js-scroll slide-left"
-                  alt="Thermomix TM6 Image">
+              <div class="col-md-6 d-flex pt-4 js-scroll slide-left">
+                <img src="static/img/alina.jpeg" class="img-design img-fluid" alt="Thermomix TM6 Image">
               </div>
               <div class="col-md-6 d-flex pt-4 js-scroll slide-right">
                 <p>
@@ -115,7 +119,7 @@
                   nutrition, and enjoy stress-free meal preparation. <br>
                   <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
                 </p>
-                <a class="btn btn-success" href="demo.html">Book a Demo</a>
+                <a class="btn btn-success mb-5" href="demo.html">Book a Demo</a>
               </div>
               <div class="col-md-6 js-scroll slide-right">
                 <img src="static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
@@ -149,36 +153,129 @@
         </div>
       </section>
     </div>
-
-    <!-- Footer -->
-    <footer class="tex-white mx-auto text-center py-4">
-      <section class="footer">
-        <h4 class="m-3">Have Questions? Ready to Book a Demo or Purchase?</h4>
-        <p>
-          I’m here to assist! Whether you’re looking for more information, want to schedule a live cooking demo, or are
-          ready to buy, feel free to get in touch.
-        </p>
-        <p>
-          Simply click the WhatsApp button below, and I’ll be happy to help you on your Thermomix® journey.
-        </p>
-        <div>
-          <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-            <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg">
-          </a>
+    <!-- Modal -->
+    <div class="modal-dialog modal-dialog-scrollable text-center">
+      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="mx-auto modal-title gowun-batang-regular text-center" id="staticBackdropLabel">Interesat de
+                Thermomix® TM6?</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="container-fluid js-scroll">
+                <div class="row">
+                  <div class="col-md-6 d-flex js-scroll slide-left">
+                    <p>
+                      Ai experimentat vreodat live, în casa ta, un produs? Find un aparat de bucatarie unic, extrem de
+                      versatil, credem că este cel mai bun și singurul mod de a vedea Thermomix® in actiune. Îti oferă
+                      sansa de a-lîncerca, de a
+                      gusta rezultatele delicioase, de a vedea cum se potriveste in bucătaria ta, de a pune întrebari
+                      consultantului tu și de a primi recomandari.
+                      Dacă esti convins de ceea ce vezi, poti plasa comanda și vei intra n lumea plină de inspiratie a
+                      Thermomix®!
+                    </p>
+                    <p class="modal-small-heading gowun-batang-regular">De ce ar trebui sã am un Demo acasa?</p>
+                    <ul class="modal-li-align-left">
+                      <li>O modalitate convenabilã de a descoperi produsul nostruîn confortul propriei case</li>
+                      <li>Descopera cum functioneaza produsul si cum se potriveste n bucataria ta</li>
+                      <li>Aprofundeazã cunoasterea produsului cu un consultant experimentat și pasionat</li>
+                    </ul>
+                  </div>
+                  <div class="col-md-6 js-scroll slide-right">
+                    <img src="static/img/buy-tm6.jpg" class="img-design img-fluid" alt="get yours thermomix tm6">
+                  </div>
+                </div>
+                <h3>Perecha Perfectã - Thermomix® și Cookidoo®</h3>
+                <div class="row">
+                  <div class="col-md-6 js-scroll slide-left">
+                    <img src="static/img/cookidoo.webp" class="img-design img-fluid" alt="recipes books">
+                  </div>
+                  <div class="col-md-6 d-flex js-scroll slide-right">
+                    <p>
+                      Portalul digital de retete Cookidoo® si robotul multitalentat Thermomix® sunt pur si simplu o
+                      pereche perfecta.
+                      Rasfoieste mii de retete Cookidoo® afisate pe ecranul Thermomix ® TM6
+                      inspira-te în fiecare zi. In plus, poti să îti creezi propriile retete pe Cookidoo® sau sã le
+                      importi pe cele existente si sã le adaptezi la gusturile tale - nu exist limite pentru
+                      creativitatea ta. Datorita instructiunilor pas cu pas, nu a fost nu a fost niciodat atât de usor
+                      să incepi să gatesti.
+                    </p>
+                  </div>
+                </div>
+                <h3>Retetarele tale Thermomix®</h3>
+                <div class="row js-scroll">
+                  <div class="col-md-6 d-flex js-scroll slide-right">
+                    <p>
+                      Cu totii avem propriul stil de gatit. In functie de starea noastra de spirit, putem sa ne testăm
+                      creativitatea cu o reteta spontana, sa pregatim ceva rapid când avem putin timp sau sã creăm o
+                      masã echilibrata, plină de proteine.
+                      Thermomix® are o gamă largă de retetare în care vei gãsi de fiecare data ceva delicios!
+                    </p>
+                  </div>
+                  <div class="col-md-6 js-scroll slide-left">
+                    <img src="static/img/recipes.png" class="img-design img-fluid" alt="">
+                  </div>
+                </div>
+                <h3>Fa cunostintã cu TM6</h3>
+                <div class="row">
+                  <div class="col-md-6 js-scroll slide-right">
+                    <img src="static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix accessories">
+                  </div>
+                  <div class="col-md-6 d-flex">
+                    <p>
+                      Thermomix® TM6 înlocuieste peste 20 de aparate de bucätärie într-un singur robot de mare putere,
+                      compact, elegant, versatil si inovativ. Cu un bol de otel inoxidabil, un cutit de ultima
+                      generatie, un senzor de temperaturã de mare precizie si un cântar integrat, TM6 face totul! Poti
+                      toca, mixa, pasa, cântari, pulveriza, frâmânta, macina si multe altele, prin simpla atingere a
+                      unui buton. De la pregâtirea mesei, pânã la spälatul vaselor, cu TM6 gâtitul acasã devine foarte
+                      usor.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-success" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
         </div>
-      </section>
-
-      <div class="footer-links">
-        <a href="demo.html">Book Demo</a> |
-        <a href="buy_thermomix.html">Buy Thermomix</a> |
-        <a href="contact.html">Contact</a>
       </div>
-      <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </div>
+    <!-- End of Modal -->
+  </div>
+
+  <!-- Footer -->
+  <footer class="container-fluid text-center py-4">
+    <section class="footer">
+      <h4 class="m-3">Have Questions? Ready to Book a Demo or Purchase?</h4>
+      <p>
+        I’m here to assist! Whether you’re looking for more information, want to schedule a live cooking demo, or are
+        ready to buy, feel free to get in touch.
+      </p>
+      <p>
+        Simply click the WhatsApp button below, and I’ll be happy to help you on your Thermomix® journey.
+      </p>
+      <div>
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
+          <img alt="Chat on WhatsApp" src="static/img/WhatsAppButtonWhiteSmall.svg">
+        </a>
+      </div>
+    </section>
+
+    <div class="footer-links">
+      <a href="demo.html">Book Demo</a> |
+      <a href="buy_thermomix.html">Buy Thermomix</a> |
+      <a href="contact.html">Contact</a>
+    </div>
+    <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
-    <script src="static/script/script.js"></script>
+  <script src="static/script/script.js"></script>
 </body>
 
 </html>
