Adding modal-dialog-scrollable class

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="modal-dialog modal-dialog-scrollable text-center">
       <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl">
+        <div class="modal-dialog modal-dialog-scrollable modal-xl">
           <div class="modal-content">
             <div class="modal-header">
               <h1 class="mx-auto modal-title gowun-batang-regular text-center" id="staticBackdropLabel">Interesat de
