Removed an ending li tag from nav

--- a/about_me.html
+++ b/about_me.html
@@ -32,8 +32,8 @@
           <li class="nav-item">
             <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
           </li>
-          <li class="nav-item"></li>
-          <a class="nav-link active" href="about_me.html">About Me</a>
+          <li class="nav-item">
+            <a class="nav-link active" href="about_me.html">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -84,7 +84,7 @@
             </p>
           </div>
           <div class="col-md-6 js-scroll slide-right">
-            <img src="static/img/Alina-profile.jpg" class="img-fluid img-design" alt="Alina's about me profile">
+            <img src="static/img/meet-your-advisor.png" class="img-fluid img-fluid-test img-design" alt="Alina's about profile">
           </div>
         </div>
         <!-- <button class="read-more btn btn-success">Read More</button> -->
@@ -93,7 +93,7 @@
           <h2 class="p-3 gowun-batang-regular">How I became a Thermomix Advisor</h2>
           <div class="col-md-6 d-flex js-scroll slide-left">
             <img src="static/img/Top-advisor.jpg" class="img-fluid img-design"
-              alt="top thermomix advisor in north London image">
+              alt="top thermomix advisor in north London">
           </div>
           <div class="col-md-6 pt-3 d-flex js-scroll slide-right">
             <p>
