Removed extra li tag

--- a/about_me.html
+++ b/about_me.html
@@ -84,7 +84,7 @@
             </p>
           </div>
           <div class="col-md-6 js-scroll slide-right">
-            <img src="static/img/meet-your-advisor.png" class="img-fluid img-fluid-test img-design" alt="Alina's about profile">
+            <img src="static/img/meet-your-advisor.png" class="img-fluid img-meet-your-advisor img-design" alt="Alina's about profile">
           </div>
         </div>
         <!-- <button class="read-more btn btn-success">Read More</button> -->
