--- a/buy_thermomix.html
+++ b/buy_thermomix.html
@@ -34,8 +34,8 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="buy_thermomix.html">Buy Thermomix</a>
                         </li>
-                        <li class="nav-item"></li>
-                        <a class="nav-link" href="about_me.html">About Me</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about_me.html">About Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="col-md-6 js-scroll slide-right">
                             <img src="static/img/buy-tm6.jpg" class="card-img-top img-design img-fluid"
-                                alt="card image">
+                                alt="show image of Alina and the thermomix">
                         </div>
 
                         <!-- Book a demo Form -->
@@ -112,11 +112,11 @@
                                 </div>
                                 <div class="mb-3">
                                     <input type="email" class="form-control" id="exampleFormControlInput1"
-                                        placeholder="Email">
+                                        placeholder="Email" aria-label="e-mail">
                                 </div>
                                 <div class="mb-3">
                                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"
-                                        placeholder="Leave a message..."></textarea>
+                                        placeholder="Leave a message..." aria-label="textarea"></textarea>
                                 </div>
                                 <div class="text-center">
                                     <button type="submit" class="btn btn-success">Submit</button>
