--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
             <li class="nav-item">
               <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
             </li>
-            <li class="nav-item"></li>
-            <a class="nav-link" href="about_me.html">About Me</a>
+            <li class="nav-item">
+              <a class="nav-link" href="about_me.html">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="contact.html">Contact</a>
@@ -95,13 +95,13 @@
                     <input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" required>
                   </div>
                   <div class="form-group col-md-6 mb-3">
-                    <input type="text" class="form-control" id="phoneNumber" placeholder="Contact Number" required>
+                    <input type="text" class="form-control" id="phoneNumber" aria-label="phoneNumber" placeholder="Contact Number" required>
                   </div>
                   <div class="col-md-6 mb-3">
-                    <input type="email" class="form-control" id="formControlInput" placeholder="Email" required>
+                    <input type="email" class="form-control" id="formControlInput" placeholder="Email" aria-label="email" required>
                   </div>
                   <div class="mb-3">
-                    <textarea class="form-control" id="formControlTextarea" rows="5" placeholder="Leave a message..."
+                    <textarea class="form-control" id="formControlTextarea" rows="5" placeholder="Leave a message..." aria-label="textarea"
                       required>
                     </textarea>
                   </div>
@@ -151,7 +151,7 @@
                   <img src="static/img/buy-tm6.jpg" class="img-design img-fluid" alt="get yours thermomix tm6">
                 </div>
               </div>
-              <h3>Perecha Perfectã - Thermomix® și Cookidoo®</h3>
+              <h2>Perecha Perfectã - Thermomix® și Cookidoo®</h2>
               <div class="row">
                 <div class="col-md-6 js-scroll slide-left">
                   <img src="static/img/cookidoo.webp" class="img-design img-fluid" alt="recipes books">
@@ -182,7 +182,7 @@
                   <img src="static/img/recipes.png" class="img-design img-fluid" alt="">
                 </div>
               </div>
-              <h3>Fa cunostintã cu TM6</h3>
+              <h4>Fa cunostintã cu TM6</h4>
               <div class="row">
                 <div class="col-md-6 js-scroll slide-right">
                   <img src="static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix accessories">
