--- a/demo.html
+++ b/demo.html
@@ -33,8 +33,8 @@
             <li class="nav-item">
               <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
             </li>
-            <li class="nav-item"></li>
-            <a class="nav-link" href="about_me.html">About Me</a>
+            <li class="nav-item">
+              <a class="nav-link" href="about_me.html">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -82,7 +82,7 @@
               </p>
               <p>Whether you need recipe tips or ongoing advice, I'm here to ensure you make the most of your
                 investment and enjoy a rewarding culinary journey! <br><br>
-                Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and
+                Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo and
                 discover how the Thermomix can transform your cooking experience today!
               </p>
             </div>
@@ -100,18 +100,18 @@
                   <input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" required>
                 </div>
                 <div class="form-group col-md-6 mb-3">
-                  <input type="text" class="form-control" id="phoneNumber" placeholder="Contact Number" required>
+                  <input type="text" class="form-control" id="contact_number" aria-label="contact_number" placeholder="Contact Number" required>
                 </div>
                 <div class="col-md-6 mb-3">
-                  <input type="email" class="form-control" id="formControlInput" placeholder="Email" required>
+                  <input type="email" class="form-control"  id="formControlInput" aria-label="e-mail" placeholder="Email" required>
                 </div>
                 <div class="mb-3">
-                  <textarea class="form-control" id="formControlTextarea" rows="5" placeholder="Leave a message..."
+                  <textarea class="form-control" id="formControlTextarea" rows="5" aria-label="textarea" placeholder="Leave a message..."
                     required>
                   </textarea>
                 </div>
                 <div>
-                  <button type="submit" class="btn btn-success">Submit</button>
+                  <button type="submit" value="submit" aria-label="submit" class="btn btn-success">Submit</button>
                 </div>
               </div>
             </form>
